--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,25 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Moj prvi chat</title>
+    <title>TO-DO</title>
 </head>
 <body>
 
     <form method="post" action="/poslji-sporocilo">
         <p>
-            Ime:
-            <input name="ime">
-        </p>
-        <p>
-            Sporočilo:
-            <input name="sporocilo">
+            Vnesi task:
+            <input name="task">
         </p>
         <p>
             <button type="submit">Objavi</button>
         </p>
     </form>
 
-    <a href="/prikazi-sporocila">Prikaži vsa sporočila</a>
+    <a href="/prikazi_sporocila">Prikaži vse</a>
 
 </body>
 </html>
