--- a/templates/izbrisi_sporocilo.html
+++ b/templates/izbrisi_sporocilo.html
@@ -8,7 +8,7 @@
 
     <h1>Ali res želite izbrisati to sporočilo?</h1>
 
-    <form method="post" action="/sporocilo/{{ sporocilo.key.id() }}/izbrisi">
+    <form method="post" action="/task/{{ task.key.id() }}/izbrisi">
         <button type="submit">Izbriši</button>
     </form>
 
