--- a/templates/sporocilo-poslano.html
+++ b/templates/sporocilo-poslano.html
@@ -8,7 +8,7 @@
 
     <h1>Sporočilo je bilo poslano</h1>
 
-    <p><a href="/prikazi-sporocila">Prikaži vsa sporočila</a></p>
+    <p><a href="/prikazi_sporocila">Prikaži vsa sporočila</a></p>
 
 </body>
 </html>
