--- a/templates/uredi_sporocilo.html
+++ b/templates/uredi_sporocilo.html
@@ -8,14 +8,10 @@
 
     <h1>Urejanje sporočila</h1>
 
-    <form method="post" action="/sporocilo/{{ sporocilo.key.id() }}/uredi">
+    <form method="post" action="/task/{{ task.key.id() }}/uredi">
         <p>
-            Ime:
-            <input name="ime" value="{{ sporocilo.ime }}" />
-        </p>
-        <p>
-            Sporočilo:
-            <input name="sporocilo"  value="{{ sporocilo.tekst }}" />
+            Task:
+            <input name="task" value="{{ task.task }}" />
         </p>
         <p>
             <button type="submit">Uredi</button>
