--- a/templates/posamezno_sporocilo.html
+++ b/templates/posamezno_sporocilo.html
@@ -6,15 +6,14 @@
 </head>
 <body>
 
-    <h2>Posamezno sporočilo</h2>
+    <h2>Task</h2>
 
-    <p>Ime uporabnika: {{ sporocilo.ime }}</p>
-    <p>Tekst: {{ sporocilo.tekst }}</p>
-    <p>Čas nastanka: {{ sporocilo.nastanek }}</p>
+    <p>{{ task.task }}</p>
+    <p>Čas vnosa: {{ task.nastanek }}</p>
 
-    <p><a href="/sporocilo/{{ sporocilo.key.id() }}/uredi">Uredi sporočilo</a></p>
-    <p><a href="/sporocilo/{{ sporocilo.key.id() }}/izbrisi">Izbriši sporočilo</a></p>
-    <p><a href="/prikazi-sporocila">Vrni se na vsa sporočila</a></p>
+    <p><a href="/task/{{ task.key.id() }}/uredi">Uredi sporočilo</a></p>
+    <p><a href="/task/{{ task.key.id() }}/izbrisi">Izbriši sporočilo</a></p>
+    <p><a href="/prikazi_sporocila">Vrni se na vsa sporočila</a></p>
 
 </body>
 </html>
